10. autoconf/slangpc.in: Added URL and Libs.private entries to the
    slang.pc pkg-config file.
11. src/slang.h: prototype for SLang_create_array1 missing from slang.h.
12. src/slcurses.c: Added debian patch that adds support for
    additional graphics characters (DIAMOND, DEGREE, etc...).
13. doc/tm/slang.tm: Added a small section about arrays of arrays.

{{{ Previous Versions

Changes since 2.1.4
1. modules/termios-module.c: Added the VMIN constant (Laurent Perez).
2. src/slbstr.c: Added foreach method to BString_Type objects.
3. module/zlib-module.c: New module that wraps libz
   (compression/decompression library).
4. doc/tm/rtl/: Some documentation updates
5. configure: Added messages about what extra modules will and will
   not be built.
6. modules/mkfiles/makefile.all: Added zlib module to the makefile.
7. autoconf/configure.ac: Fixed the spelling oniguruma (Peter J. Ross)
8. src/slang.c,slparse.c,sltoken.c: Added 'break n' and 'continue n'
   statements.
9. src/slang.c: break-n and continue-n were not being properly handled
   when used outside a function.
10. src/slparse.c, sltoken.c: Added the C-like ternary-expression
    "condition ? foo : bar".
11. src/sltoken.c: Added support for mult-line strings:

        "This is a \
	 multiline \
	 string".

         `This is another
	 multiline 
	 string.`

    Note that the backquoted does not require a backslash at the end
    of lines.
12. src/sltoken.c: When reading subsequent lines of a multiline
    string, increment the readline parse_level.
13. src/sltoken.c: When performing backslash expansion, if a solitary
    backslash occurs at the end of a line, or is preceeded by a
    newline at the end of a line, then ignore it.
14. src/slexcept.c: The use of an ERROR_BLOCK was causing the pointer
    holding the name of the function with the error to be freed twice.
15. slsh/lib/rline/*keys.sl: Bind "\n" to the readline "enter" function.
16. src/sltoken.c: Improved and simplified the way operators are